--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>😒Aksa's first ever website😆</title>
+  <title>Aksa Mary Pramod// Curriculum Vitae </title>
 </head>
 
 <body>
